# social-segregation-simulator

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
samples/: README.md
